// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-multi-select"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectChip > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <input
    aria-hidden="true"
    class="mocked-styled-0 el-multi-select-checkbox"
    id="test-id"
    type="checkbox"
  />
  <label
    class="mocked-styled-1 el-multi-select-label"
    for="test-id"
    role="option"
  >
    <span>
      Some Value
    </span>
  </label>
</DocumentFragment>
`;

exports[`MultiSelectInput > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-multi-select-input-wrapper"
  >
    <input
      class="mocked-styled-5 el-multi-select-input"
      id="react-example"
    />
    <div
      aria-label="Multi selected options"
      class="mocked-styled-3 el-multi-select-selected"
      role="listbox"
    >
      <input
        aria-checked="true"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="multi-select-chip-item-one"
        role="option"
        type="checkbox"
      />
      <label
        class="mocked-styled-1 el-multi-select-label"
        for="multi-select-chip-item-one"
        role="option"
        tabindex="0"
      >
        Item one
      </label>
    </div>
    <div
      aria-label="Multi unselected options"
      class="mocked-styled-4 el-multi-select-un-selected"
      role="listbox"
    >
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item two
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectInput > should match a snapshot and render non selected message where there are no selected items 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-multi-select-input-wrapper"
  >
    <input
      class="mocked-styled-5 el-multi-select-input"
      id="react-example"
    />
    <div
      aria-label="Multi selected options"
      class="mocked-styled-3 el-multi-select-selected"
      role="listbox"
    >
      <span
        class="el-ml2 el-intent-default el-icon"
      >
        <svg
          fill="none"
          height="1em"
          role="img"
          title="Icon image with name task"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13C4.55228 13 5 12.5523 5 12C5 11.4477 4.55228 11 4 11ZM4 7C4.55228 7 5 6.55228 5 6C5 5.44772 4.55228 5 4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7ZM4 17C3.44772 17 3 17.4477 3 18C3 18.5523 3.44772 19 4 19C4.55228 19 5 18.5523 5 18C5 17.4477 4.55228 17 4 17ZM20 11H8C7.44772 11 7 11.4477 7 12C7 12.5523 7.44772 13 8 13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11ZM8 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H8C7.44772 5 7 5.44772 7 6C7 6.55228 7.44772 7 8 7ZM20 17H8C7.44772 17 7 17.4477 7 18C7 18.5523 7.44772 19 8 19H20C20.5523 19 21 18.5523 21 18C21 17.4477 20.5523 17 20 17Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <p>
        No items selected
      </p>
    </div>
    <div
      aria-label="Multi unselected options"
      class="mocked-styled-4 el-multi-select-un-selected"
      role="listbox"
    >
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item one
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item two
      </label>
      <input
        aria-checked="false"
        aria-hidden="true"
        class="mocked-styled-0 el-multi-select-checkbox"
        id="test-static-id"
        role="option"
        type="checkbox"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="test-static-id"
        role="option"
        tabindex="0"
      >
        Item three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectSelected > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-multi-select-selected"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectUnSelected > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 el-multi-select-un-selected"
  >
    <span>
      Some Value
    </span>
  </div>
</DocumentFragment>
`;
